<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:contentDescription="@string/img_logo"
        android:layout_marginBottom="100dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/imglogo"
        android:background="@drawable/logotext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginBottom="50dp"
        android:textAlignment="center"
        android:layout_below="@+id/imglogo"
        android:id="@+id/tvsilahkan"
        android:text="@string/tv_silahkan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:inputType="text"
        android:autofillHints="@string/app_hint_Username"
        android:layout_marginBottom="@dimen/fab_margin"
        android:hint="@string/app_hint_Username"
        android:drawableStart="@drawable/ic_username"
        android:id="@+id/etUsername"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvsilahkan"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

     <EditText
         android:autofillHints="@string/app_hint_password"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/fab_margin"
            android:hint="@string/app_hint_password"
            android:drawableStart="@drawable/ic_password"
            android:id="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/etUsername"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>
     <Button
         android:foreground="@drawable/btn_sign_in"
         android:background="@drawable/btn_sign_in"
         android:layout_centerHorizontal="true"
         android:id="@+id/btnlogin"
         android:layout_below="@+id/etPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>

     <TextView
         android:id="@+id/tvCreateAccount"
         android:layout_marginTop="@dimen/fab_margin"
         android:textAlignment="center"
         android:text="@string/tv_CreateAccount"
         android:layout_below="@id/btnlogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>


    </RelativeLayout>




</LinearLayout>